# my-portable-console

./: .gitignore  README.md
.github/workflows/: release.yml
button-test/: CMakeLists.txt  button-test.c
experiments/screen-test-1/: screen-test-1.c
kernel/: CMakeLists.txt  CMakePresets.json  README.md  build.ps1  build.sh  setup.ps1  setup.sh
kernel/src/: main.c
kernel/src/drivers/: allocator.c  allocator.h  buttons.c  buttons.h  fs.h  memory.c  memory.h  pins.c  pins.h  sd_card.c  sd_card.h
kernel/src/drivers/graphics/: lcd.c  lcd.h  os.c  os.h
screen-test-1/: CMakeLists.txt  screen-test-1.c
sd-card-test/: CMakeLists.txt  pico_sdk_import.cmake  sd-card-test.c
tests/: README.md  test_build.sh  test_cmake_config.sh  test_setup.ps1  test_workflow.sh
